fix(carousel): swiper scrollbar height

--- a/src/common/scss/utility/swiper-shidoka.scss
+++ b/src/common/scss/utility/swiper-shidoka.scss
@@ -7,6 +7,7 @@
   --swiper-fractional-height: 54px;
   --swiper-bullets-height: 32px;
   --swiper-tabs-height: 64px;
+  --swiper-scrollbar-size: 8px;
   --swiper-scrollbar-drag-bg-color: var(--kd-color-background-accent-tertiary);
   --swiper-scrollbar-bg-color: var(--kd-color-background-ui-soft);
   --swiper-scrollbar-border-radius: 8px;
